--- a/src/NativePlauginTest.csproj
+++ b/src/NativePlauginTest.csproj
@@ -4,4 +4,23 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="Stride">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\Stride.dll</HintPath>
+    </Reference>
+    <Reference Include="Stride.Core">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\Stride.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Stride.Graphics">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\Stride.Graphics.dll</HintPath>
+    </Reference>
+    <Reference Include="Stride.Rendering">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\Stride.Rendering.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
